tests/ui/int_too_big.stderr
Error [E0007]: this number is too big
  --> tests/ui/int_too_big.jet:2:13
    |
  2 |     val x = 99999999999999999999;
    |             ^^^^^^^^^^^^^^^^^^^^
 Why: numbers currently top out at 9223372036854775807 (a 64-bit integer)
 Fix: use a smaller number
