tests/ui/int_too_big.lex
fn main() {
    val x = 99999999999999999999;
    print(x);
}
